language/src/main/java/com/oracle/truffle/tcl/parser/TclParser.java
// Generated from language/src/main/java/com/oracle/truffle/tcl/parser/Tcl.g4 by ANTLR 4.7.1
package com.oracle.truffle.tcl.parser;

// DO NOT MODIFY - generated from SimpleLanguage.g4 using "mx create-sl-parser"
import java.util.ArrayList;
import java.util.List;
import java.util.Map;
import com.oracle.truffle.api.source.Source;
import com.oracle.truffle.api.RootCallTarget;
import com.oracle.truffle.tcl.SLLanguage;
import com.oracle.truffle.tcl.nodes.SLExpressionNode;
import com.oracle.truffle.tcl.nodes.SLRootNode;
import com.oracle.truffle.tcl.nodes.SLStatementNode;
import com.oracle.truffle.tcl.parser.TclParseError;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TclParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, IDENTIFIER=48, VALUE_INTEGER=49, VALUE_DOUBLE=50, 
		VALUE_STRING=51, WS=52, COMMENT=53;
	public static final int
		RULE_tcl = 0, RULE_procs_statement = 1, RULE_proc_statement = 2, RULE_args_statement = 3, 
		RULE_body_statement = 4, RULE_if_statement = 5, RULE_elseif_statement = 6, 
		RULE_else_statement = 7, RULE_switch_statement = 8, RULE_case_statement = 9, 
		RULE_case2_statement = 10, RULE_default_statement = 11, RULE_for_statement = 12, 
		RULE_while_statement = 13, RULE_body_loop_func = 14, RULE_if_loop_func = 15, 
		RULE_elseif_loop_func = 16, RULE_else_loop_func = 17, RULE_switch_loop_func = 18, 
		RULE_case_loop_func = 19, RULE_case2_loop_func = 20, RULE_default_loop_func = 21, 
		RULE_modulo_ppal = 22, RULE_r_if = 23, RULE_elseif = 24, RULE_r_else = 25, 
		RULE_r_switch = 26, RULE_r_case = 27, RULE_case2 = 28, RULE_r_default = 29, 
		RULE_body_inst = 30, RULE_r_for = 31, RULE_r_while = 32, RULE_body_loop = 33, 
		RULE_if_loop = 34, RULE_elseif_loop = 35, RULE_else_loop = 36, RULE_switch_loop = 37, 
		RULE_case_loop = 38, RULE_case2_loop = 39, RULE_default_loop = 40, RULE_puts = 41, 
		RULE_gets = 42, RULE_set = 43, RULE_agroup = 44, RULE_aux_agroup = 45, 
		RULE_aux_array = 46, RULE_param_func = 47, RULE_aux_param = 48, RULE_assignment = 49, 
		RULE_index = 50, RULE_val_index = 51, RULE_value = 52, RULE_increment = 53, 
		RULE_r_break = 54, RULE_r_continue = 55, RULE_r_return = 56, RULE_value_return = 57, 
		RULE_expr = 58, RULE_asig_for = 59, RULE_start_if = 60, RULE_start_elseif = 61, 
		RULE_start_else = 62, RULE_start_switch = 63, RULE_start_case = 64, RULE_start_default = 65, 
		RULE_start_for = 66, RULE_dec_for = 67, RULE_start_while = 68, RULE_expresion = 69, 
		RULE_exp_or = 70, RULE_exp_and = 71, RULE_exp_ig = 72, RULE_exp_rel = 73, 
		RULE_exp_add = 74, RULE_exp_mul = 75, RULE_exp_pot = 76, RULE_exp_una = 77, 
		RULE_term = 78, RULE_op_ig = 79, RULE_op_rel = 80, RULE_op_add = 81, RULE_op_mul = 82, 
		RULE_op_una = 83;
	public static final String[] ruleNames = {
		"tcl", "procs_statement", "proc_statement", "args_statement", "body_statement", 
		"if_statement", "elseif_statement", "else_statement", "switch_statement", 
		"case_statement", "case2_statement", "default_statement", "for_statement", 
		"while_statement", "body_loop_func", "if_loop_func", "elseif_loop_func", 
		"else_loop_func", "switch_loop_func", "case_loop_func", "case2_loop_func", 
		"default_loop_func", "modulo_ppal", "r_if", "elseif", "r_else", "r_switch", 
		"r_case", "case2", "r_default", "body_inst", "r_for", "r_while", "body_loop", 
		"if_loop", "elseif_loop", "else_loop", "switch_loop", "case_loop", "case2_loop", 
		"default_loop", "puts", "gets", "set", "agroup", "aux_agroup", "aux_array", 
		"param_func", "aux_param", "assignment", "index", "val_index", "value", 
		"increment", "r_break", "r_continue", "r_return", "value_return", "expr", 
		"asig_for", "start_if", "start_elseif", "start_else", "start_switch", 
		"start_case", "start_default", "start_for", "dec_for", "start_while", 
		"expresion", "exp_or", "exp_and", "exp_ig", "exp_rel", "exp_add", "exp_mul", 
		"exp_pot", "exp_una", "term", "op_ig", "op_rel", "op_add", "op_mul", "op_una"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'proc'", "'{'", "'}'", "';'", "'puts'", "'gets'", "'stdin'", "'set'", 
		"'['", "']'", "'array'", "'size'", "'exists'", "'$'", "'('", "')'", "'break'", 
		"'continue'", "'return'", "'expr'", "'if'", "'then'", "'elseif'", "'else'", 
		"'switch'", "'case'", "'default'", "'for'", "'incr'", "'while'", "'||'", 
		"'&&'", "'**'", "'eq'", "'=='", "'ne'", "'!='", "'>'", "'<'", "'>='", 
		"'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"IDENTIFIER", "VALUE_INTEGER", "VALUE_DOUBLE", "VALUE_STRING", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tcl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	private TclNodeFactory factory;
	private Source source;
	private static final class BailoutErrorListener extends BaseErrorListener {
	    private final Source source;
	    BailoutErrorListener(Source source) {
	        this.source = source;
	    }
	    @Override
	    public void syntaxError(Recognizer<?, ?> recognizer, Object offendingSymbol, int line, int charPositionInLine, String msg, RecognitionException e) {
	        throwParseError(source, line, charPositionInLine, (Token) offendingSymbol, msg);
	    }
	}

	public void SemErr(Token token, String message) {
	    assert token != null;
	    throwParseError(source, token.getLine(), token.getCharPositionInLine(), token, message);
	}

	private static void throwParseError(Source source, int line, int charPositionInLine, Token token, String message) {
	    int col = charPositionInLine + 1;
	    String location = "-- line " + line + " col " + col + ": ";
	    int length = token == null ? 1 : Math.max(token.getStopIndex() - token.getStartIndex(), 0);
	    throw new TclParseError(source, line, col, length, String.format("Error(s) parsing script:%n" + location + message));
	}

	public static Map<String, RootCallTarget> parseSL( SLLanguage language, Source source) {
	    TclLexer lexer = new TclLexer(CharStreams.fromString(source.getCharacters().toString()));
	    TclParser parser = new TclParser(new CommonTokenStream(lexer));
	    lexer.removeErrorListeners();
	    parser.removeErrorListeners();
	    BailoutErrorListener listener = new BailoutErrorListener(source);
	    lexer.addErrorListener(listener);
	    parser.addErrorListener(listener);
	    parser.factory = new TclNodeFactory(language, source);
	    parser.source = source;
	    parser.tcl();
	    return parser.factory.getAllFunctions();
	}

	public TclParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TclContext extends ParserRuleContext {
		public Procs_statementContext procs_statement() {
			return getRuleContext(Procs_statementContext.class,0);
		}
		public Modulo_ppalContext modulo_ppal() {
			return getRuleContext(Modulo_ppalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TclParser.EOF, 0); }
		public TclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tcl; }
	}

	public final TclContext tcl() throws RecognitionException {
		TclContext _localctx = new TclContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			procs_statement();
			setState(169);
			modulo_ppal();
			setState(170);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procs_statementContext extends ParserRuleContext {
		public List<Proc_statementContext> proc_statement() {
			return getRuleContexts(Proc_statementContext.class);
		}
		public Proc_statementContext proc_statement(int i) {
			return getRuleContext(Proc_statementContext.class,i);
		}
		public Procs_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procs_statement; }
	}

	public final Procs_statementContext procs_statement() throws RecognitionException {
		Procs_statementContext _localctx = new Procs_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_procs_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(172);
				proc_statement();
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Proc_statementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TclParser.IDENTIFIER, 0); }
		public Args_statementContext args_statement() {
			return getRuleContext(Args_statementContext.class,0);
		}
		public Body_statementContext body_statement() {
			return getRuleContext(Body_statementContext.class,0);
		}
		public Proc_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proc_statement; }
	}

	public final Proc_statementContext proc_statement() throws RecognitionException {
		Proc_statementContext _localctx = new Proc_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_proc_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(T__0);
			setState(179);
			match(IDENTIFIER);
			setState(180);
			match(T__1);
			setState(181);
			args_statement();
			setState(182);
			match(T__2);
			setState(183);
			match(T__1);
			setState(184);
			body_statement();
			setState(185);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Args_statementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TclParser.IDENTIFIER, 0); }
		public Args_statementContext args_statement() {
			return getRuleContext(Args_statementContext.class,0);
		}
		public Args_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args_statement; }
	}

	public final Args_statementContext args_statement() throws RecognitionException {
		Args_statementContext _localctx = new Args_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_args_statement);
		try {
			setState(192);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				match(T__1);
				setState(188);
				match(IDENTIFIER);
				setState(189);
				match(T__2);
				setState(190);
				args_statement();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Body_statementContext extends ParserRuleContext {
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public Body_statementContext body_statement() {
			return getRuleContext(Body_statementContext.class,0);
		}
		public PutsContext puts() {
			return getRuleContext(PutsContext.class,0);
		}
		public GetsContext gets() {
			return getRuleContext(GetsContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Switch_statementContext switch_statement() {
			return getRuleContext(Switch_statementContext.class,0);
		}
		public R_returnContext r_return() {
			return getRuleContext(R_returnContext.class,0);
		}
		public AgroupContext agroup() {
			return getRuleContext(AgroupContext.class,0);
		}
		public Body_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_statement; }
	}

	public final Body_statementContext body_statement() throws RecognitionException {
		Body_statementContext _localctx = new Body_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body_statement);
		try {
			setState(224);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(194);
				set();
				setState(195);
				body_statement();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(197);
				puts();
				setState(198);
				body_statement();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(200);
				gets();
				setState(201);
				match(T__3);
				setState(202);
				body_statement();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 4);
				{
				setState(204);
				if_statement();
				setState(205);
				body_statement();
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 5);
				{
				setState(207);
				for_statement();
				setState(208);
				body_statement();
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 6);
				{
				setState(210);
				while_statement();
				setState(211);
				body_statement();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 7);
				{
				setState(213);
				switch_statement();
				setState(214);
				body_statement();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 8);
				{
				setState(216);
				r_return();
				setState(217);
				body_statement();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 9);
				{
				setState(219);
				agroup();
				setState(220);
				match(T__3);
				setState(221);
				body_statement();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 10);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public Start_ifContext start_if() {
			return getRuleContext(Start_ifContext.class,0);
		}
		public Body_statementContext body_statement() {
			return getRuleContext(Body_statementContext.class,0);
		}
		public Elseif_statementContext elseif_statement() {
			return getRuleContext(Elseif_statementContext.class,0);
		}
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
	}

	public final If_statementContext if_statement() throws RecognitionException {
		If_statementContext _localctx = new If_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_if_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226);
			start_if();
			setState(227);
			body_statement();
			setState(228);
			match(T__2);
			setState(229);
			elseif_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Elseif_statementContext extends ParserRuleContext {
		public Start_elseifContext start_elseif() {
			return getRuleContext(Start_elseifContext.class,0);
		}
		public Body_statementContext body_statement() {
			return getRuleContext(Body_statementContext.class,0);
		}
		public Elseif_statementContext elseif_statement() {
			return getRuleContext(Elseif_statementContext.class,0);
		}
		public Else_statementContext else_statement() {
			return getRuleContext(Else_statementContext.class,0);
		}
		public Elseif_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseif_statement; }
	}

	public final Elseif_statementContext elseif_statement() throws RecognitionException {
		Elseif_statementContext _localctx = new Elseif_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_elseif_statement);
		try {
			setState(237);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__22:
				enterOuterAlt(_localctx, 1);
				{
				setState(231);
				start_elseif();
				setState(232);
				body_statement();
				setState(233);
				match(T__2);
				setState(234);
				elseif_statement();
				}
				break;
			case T__2:
			case T__4:
			case T__5:
			case T__7:
			case T__8:
			case T__18:
			case T__20:
			case T__23:
			case T__24:
			case T__27:
			case T__29:
				enterOuterAlt(_localctx, 2);
				{
				setState(236);
				else_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_statementContext extends ParserRuleContext {
		public Start_elseContext start_else() {
			return getRuleContext(Start_elseContext.class,0);
		}
		public Body_statementContext body_statement() {
			return getRuleContext(Body_statementContext.class,0);
		}
		public Else_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_statement; }
	}

	public final Else_statementContext else_statement() throws RecognitionException {
		Else_statementContext _localctx = new Else_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_else_statement);
		try {
			setState(244);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__23:
				enterOuterAlt(_localctx, 1);
				{
				setState(239);
				start_else();
				setState(240);
				body_statement();
				setState(241);
				match(T__2);
				}
				break;
			case T__2:
			case T__4:
			case T__5:
			case T__7:
			case T__8:
			case T__18:
			case T__20:
			case T__24:
			case T__27:
			case T__29:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Switch_statementContext extends ParserRuleContext {
		public Start_switchContext start_switch() {
			return getRuleContext(Start_switchContext.class,0);
		}
		public Case_statementContext case_statement() {
			return getRuleContext(Case_statementContext.class,0);
		}
		public Switch_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switch_statement; }
	}

	public final Switch_statementContext switch_statement() throws RecognitionException {
		Switch_statementContext _localctx = new Switch_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_switch_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(246);
			start_switch();
			setState(247);
			case_statement();
			setState(248);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Case_statementContext extends ParserRuleContext {
		public Start_caseContext start_case() {
			return getRuleContext(Start_caseContext.class,0);
		}
		public Body_statementContext body_statement() {
			return getRuleContext(Body_statementContext.class,0);
		}
		public Case2_statementContext case2_statement() {
			return getRuleContext(Case2_statementContext.class,0);
		}
		public Case_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_case_statement; }
	}

	public final Case_statementContext case_statement() throws RecognitionException {
		Case_statementContext _localctx = new Case_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_case_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(250);
			start_case();
			setState(251);
			body_statement();
			setState(252);
			match(T__2);
			setState(253);
			case2_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Case2_statementContext extends ParserRuleContext {
		public Start_caseContext start_case() {
			return getRuleContext(Start_caseContext.class,0);
		}
		public Body_statementContext body_statement() {
			return getRuleContext(Body_statementContext.class,0);
		}
		public Case2_statementContext case2_statement() {
			return getRuleContext(Case2_statementContext.class,0);
		}
		public Default_statementContext default_statement() {
			return getRuleContext(Default_statementContext.class,0);
		}
		public Case2_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_case2_statement; }
	}
